--- a/ex18.html
+++ b/ex18.html
@@ -21,7 +21,7 @@
       </div>
     </section>
     <footer>
-      <p>©CursoEmVideo</p>
+      <p>©Criado por Evandro de Jesus Lima</p>
     </footer>
     <script src="ex18.js"></script>
   </body>
